styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --header-height: 2.5em;
}
.max-w-article {
  max-width: min(90vw, 60ch);
}
.max-w-page {
  max-width: min(94vw, 50rem);
}

body {
  font-family: "Inter", "Roboto", system-ui, sans-serif;
}

code {
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New,
    monospace;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Sora", "Inter", "Roboto", system-ui, sans-serif;
}

html {
  max-width: 100vw;
  overflow-x: hidden;
  line-height: 1.5;
}

html,
body,
#__next {
  height: 100%;
}

p a,
.in-text-link {
  text-decoration-line: underline;
}

@media screen and (max-width: 640px) {
  .mobile-sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border-width: 0;
  }
}

@media screen and (max-width: 640px) {
  .desktop-only {
    display: none;
  }
}
@media screen and (min-width: 640px) {
  .mobile-only {
    display: none;
  }
}

.fade-vertically {
  -webkit-mask-image: linear-gradient(to bottom, black 0%, transparent 70%);
  mask-image: linear-gradient(to bottom, black 0%, transparent 70%);
}

@supports (backdrop-filter: blur(1rem)) {
  .bg-blur-if-supports {
    backdrop-filter: blur(1rem);
  }
}
@media (prefers-contrast: more) {
  @supports (backdrop-filter: blur(1rem)) {
    /* prefere-contrast more removes blur effect. 
    so we need a darker back otherwise we get even less contrast! */
    .bg-blur-if-supports {
      backdrop-filter: none;
    }
  }
}

.space-y-article > * + * {
  margin-top: 1.5em;
}

button,
input,
select,
textarea,
a {
  outline-offset: 3px;
}

.before\:inline-block::before {
  display: inline-block;
}

.inline-block {
  display: inline-block;
}

.t-gap-sm > * + * {
  margin-block-start: 0.8em;
}
.t-gap-md > * + * {
  margin-block-start: 1em;
}

.t-gap-lg > * + * {
  margin-block-start: 1.2em;
}
.t-gap-xl > * + * {
  margin-block-start: 1.5em;
}

.article > * + * {
  margin-block-start: 1.5em;
}

